# ssr-ai-chat

./: .editorconfig  README.md  docker-compose.yml  package.json
dev/: init-db.js
server/: .dockerignore  Dockerfile  pyproject.toml
server/app/: __init__.py  main.py  paths.py
server/app/config/: __init__.py  settings.py
server/app/crud/: users.py
server/app/database/: init_db.py
server/app/dependencies/: auth.py  base.py  file_storage.py  milvus_db.py  session.py
server/app/dependencies/components/: __init__.py  embedding.py  ingest.py  llm.py  node_store.py  vector_store.py
server/app/dependencies/open_ai/: __init__.py  openai_models.py
server/app/dependencies/services/: __init__.py  chat.py  chunks.py  embeddings.py  ingest.py
server/app/middleware/: session.py
server/app/routes/: __init__.py  auth.py  chat.py  ingest.py  upload.py
server/app/routes/ui/: auth.py  chat.py  dashboard.py  template.py
server/app/static/styles/: login.css
server/app/templates/: tailwind.config.js
server/app/templates/layouts/: authenticated.html  base.html  unauthenticated.html
server/app/templates/views/: chat.html  dashboard.html  login.html
server/development/: populate.py  setup_llm.py
server/tests/: conftest.py  test_auth.py
